# cc-router

./: .gitignore  README.en.md  README.ja.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  test-ccrouter.html
.github/workflows/: release.yml
assets/: build_icon.py
docs/: responses-api-probe.md
scripts/: generate-latest-json.mjs  probe_anthropic_compat.py  set-version.mjs
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: chatgpt_smoke.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_add_supports_thinking_blocks.sql  003_add_events_and_diagnostics.sql  004_add_thinking_block_field_name.sql  005_drop_thinking_block_field_name.sql  006_add_request_stats_daily.sql  007_drop_supports_thinking_blocks.sql  008_add_subscription_oauth.sql  009_add_client_info.sql  010_add_subscription_balance.sql  011_add_request_entry_kind_and_http_version.sql  012_add_model_slot_fable.sql
src-tauri/providers/: _schema.json  aiberm.yaml  alibaba.yaml  anthropic.yaml  baidu.yaml  deepseek.yaml  fireworks.yaml  google-ai-studio.yaml  google-gemini-interactions.yaml  kiro.yaml  minimax.yaml  modelscope.yaml  moonshot.yaml  ollama.yaml  openai-codex.yaml  openai.yaml  openrouter.yaml  stepfun.yaml  tencent.yaml  ucloud.yaml  volcengine.yaml  whatai.yaml  xiaomi.yaml  zhipu.yaml
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  tray.rs  updater_source.rs
src-tauri/src/commands/: app.rs  debug.rs  events.rs  integrations.rs  mod.rs  oauth.rs  onboarding.rs  providers.rs  proxy.rs  receipts.rs  requests.rs  settings.rs  statistics.rs  subscriptions.rs  tls.rs  updater.rs  virtual_models.rs
src-tauri/src/db/: mod.rs  paths.rs
src-tauri/src/integrations/: claude_code.rs  codex.rs  mod.rs
src-tauri/src/oauth/: chatgpt.rs  chatgpt_models.rs  kiro.rs  mod.rs
src-tauri/src/observability/: body_dump.rs  cleanup.rs  events.rs  logger.rs  mod.rs  request_log.rs
src-tauri/src/provider/: loader.rs  mod.rs  model.rs  schema.rs
src-tauri/src/proxy/: client_fingerprint.rs  extractors.rs  gemini_dispatch.rs  gemini_interactions_dispatch.rs  handler.rs  middleware.rs  mod.rs  oauth_dispatch.rs  openai_chat_completions_dispatch.rs  openai_responses_dispatch.rs  overloaded.rs  pipeline.rs  retry.rs  sanitize.rs  server.rs  sse.rs  sse_framing.rs  upstream.rs
src-tauri/src/proxy/transform/: aws_event_stream.rs  gemini.rs  gemini_interactions.rs  kiro_codewhisperer.rs  mod.rs  openai.rs  openai_chat_completions.rs  openai_responses.rs  responses_common.rs  responses_inbound.rs
src-tauri/src/settings/: mod.rs  model.rs
src-tauri/src/subscription/: balance_discovery.rs  mod.rs  model.rs  model_discovery.rs  ping.rs  recheck_worker.rs  state_machine.rs  store.rs
src-tauri/src/tls/: ca.rs  config.rs  leaf.rs  mod.rs  store.rs
src-tauri/src/virtual_model/: mod.rs  model.rs  scheduler.rs  store.rs
src-tauri/tests/: integrations_claude_code.rs  proxy_e2e.rs
src/api/: tauri.ts
src/components/: ChatGptOAuthDialog.tsx  ClaudeCodeSettingsEditor.tsx  ClientToolBadge.tsx  CodexSettingsEditor.tsx  CopyableBlock.tsx  EmptyState.tsx  KiroAuthDialog.tsx  ModelSlotPicker.tsx  Pagination.tsx  ProviderBadge.tsx  ProviderIcon.tsx  ProviderLogo.tsx  RequestDetailDialog.tsx  RouteFlowDiagram.tsx  SortableSubscriptionList.tsx  Spinner.tsx  StatusBadge.tsx  SubscriptionBalanceCard.tsx  SubscriptionEventsList.tsx  SystemErrorsList.tsx  Toggle.tsx
src/hooks/: useClaudeCodeSettings.ts  useCodexSettings.ts  useEvents.ts  useProviders.ts  useReceipts.ts  useRequests.ts  useRouteFlash.ts  useSettings.ts  useStatistics.ts  useSubscriptions.ts  useUpdater.tsx  useVirtualModels.ts
src/i18n/: index.tsx
(+42 files in other folders)
