[package]
name = "cc-router"
version = "0.5.3"
description = "多订阅聚合代理 · 让 Claude Code 无缝调用多家厂商订阅"
authors = ["cc-router"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "cc_router_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["http2", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = { version = "1", features = ["full"] }
bytes = "1"
futures = "0.3"

reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }

sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "chrono"] }

jsonschema = { version = "0.18", default-features = false }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
async-trait = "0.1"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
